--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
             </nav>
         </header>
 
+        <div class="container">
+            <div id="lista-produtos"></div>
+            <div id="lista-carrinho">
+                <h3>Carrinho de Compras</h3>
+                <div id="total-carrinho">Total: R$ 0.00</div>
+                <button id="botao-finalizar" onclick="finalizarCompra()">Finalizar Compra</button>
+            </div>
+        </div>
+
         <main>
             <section id="produtos">
                 <h2>Produtos</h2>
